modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/deny-exec/constraints/policy_1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8DenyExec
metadata:
  name: deny-exec-policy
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: ["" ]
      kinds: ["Pod"]
    scope: Namespaced
  parameters:
    allowedCommands:
    - "ls"
