modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/deny-exec/rendered/test_samples/pods/002-002-allowed-command-ls-stdin-false.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-command-ls-stdin-false
    namespace: testns
spec:
    containers:
        - command:
            - ls
          image: nginx:latest
          name: nginx
          stdin: false
