modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/deny-exec/rendered/test_samples/pods/003-003-disallowed-command-not-allowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-command-not-allowed
    namespace: testns
spec:
    containers:
        - command:
            - cat
          image: nginx:latest
          name: nginx
