modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/deny-exec/rendered/test_samples/pods/004-004-disallowed-stdin-true.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-stdin-true
    namespace: testns
spec:
    containers:
        - command:
            - ls
          image: nginx:latest
          name: nginx
          stdin: true
