modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/deny-exec/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: deny-exec
tests:
  - name: security-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 001-allowed-absent-command-stdin
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-001-allowed-absent-command-stdin.yaml
        assertions:
          - violations: "no"
      - name: 002-allowed-command-ls-stdin-false
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-002-allowed-command-ls-stdin-false.yaml
        assertions:
          - violations: "no"
      - name: 003-disallowed-command-not-allowed
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-003-disallowed-command-not-allowed.yaml
        assertions:
          - violations: "yes"
      - name: 004-disallowed-stdin-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-004-disallowed-stdin-true.yaml
        assertions:
          - violations: "yes"
